Fixed a bug with user listings not showing on profile page. Update styling

--- a/frontend/src/components/profile/ProfilePage.css
+++ b/frontend/src/components/profile/ProfilePage.css
@@ -112,7 +112,7 @@
     "profile-image about"
     "personal about";
   grid-template-columns: 1fr 5fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 1fr 0.5fr;
   width: 80vw;
 }
 
@@ -128,7 +128,6 @@
   border-radius: 8px;
   background-color: rgb(25, 30, 36);
   font-size: 1.5em;
-  height: 80%;
   padding: 10px;
   box-sizing: border-box;
 }
